Changes in version 0.11
=======================

STILL UNDER DEVELOPMENT; NOT RELEASED YET.

* Issue 102: Set TMPDIR to the test case's work directory when running
  the test case.  If the test case happens to use the mktemp(3) family
  of functions (due to misunderstandings on how Kyua works or due to
  the reuse of legacy test code), we don't want it to easily escape the
  automanaged work directory.


Changes in version 0.10
=======================

Experimental version released on August 14th, 2014.

* Merged 'kyua-cli' and 'kyua-testers' into a single 'kyua' package.

* Dropped the 'kyua-atf-compat' package.

* Issue 100: Do not try to drop privileges to unprivileged_user when we
  are already running as an unprivileged user.  Doing so is not possible
  and thus causes spurious test failures when the current user is not
  root and the current user and unprivileged_user do not match.

* Issue 79: Mention kyua.conf(5) in the "see also" section of kyua(1).

* Issue 75: Change the rewrite__expected_signal__bad_arg test in
  testers/atf_result_test to use a different signal value.  This is to
  prevent triggering a core dump that made the test fail in some platforms.


Changes in kyua-cli version 0.9
===============================

Experimental version released on August 8th, 2014.

Major changes:

The internal architecture of Kyua to record the results of test suite
runs has completely changed in this release.  Kyua no longer stores all
the different test suite run results as different "actions" within the
single store.db database.  Instead, Kyua now generates a separate
results file inside ~/.kyua/store/ for every test suite run.

Due to the complexity involved in the migration process and the little
need for it, this is probably going to be the only release where the
'db-migrate' command is able to convert an old store.db file to the
new scheme.

Changes in more detail:

* Added the 'report-junit' command to generate JUnit XML result files.