@@ -29,7 +29,7 @@
 .Dt KYUA-ATF-INTERFACE 7
 .Os
 .Sh NAME
-.Nm atf-interface
+.Nm "kyua atf-interface"
 .Nd Description of the ATF test program interface
 .Sh DESCRIPTION
 The interface of ATF test programs is the interface of the test
