@@ -29,7 +29,7 @@
 .Dt KYUA-PLAIN-INTERFACE 7
 .Os
 .Sh NAME
-.Nm plain-interface
+.Nm "kyua plain-interface"
 .Nd Description of the plain test program interface
 .Sh DESCRIPTION
 The
