@@ -29,7 +29,7 @@
 .Dt KYUA-TAP-INTERFACE 7
 .Os
 .Sh NAME
-.Nm tap-interface
+.Nm "kyua tap-interface"
 .Nd Description of the TAP test program interface
 .Sh DESCRIPTION
 The
